# smoothoperatormini

./: .gitignore  ARCH.md  RAILWAY_QUICKSTART.md  README.md  SPEC.md  railway-deployment-guide-complete.md  smoothoperator-embed-demo.html  technology-stack-decision-rationale.md
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  main.py  session.py
api/app/agents/: __init__.py  orchestrator.py
api/app/mcp/: note_server.py
api/app/routers/: __init__.py  auth.py  chatkit.py  threads.py
web/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  config.ts  index.css  types.ts
web/src/hooks/: useAuth.ts
web/src/lib/: api.ts
web/src/pages/: ChatPage.tsx  LoginPage.tsx  SettingsPage.tsx
